--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login_button_text">Log in</string>
     <string name="login_activity_separator_text">OR</string>
     <string name="login_activity_register_button_text">Register</string>
+    <string name="restaurant_info_activity_main_meals">Pratos Principais</string>
 </resources>
