--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="loginActivityTitle">Digital House Foods</string>
     <string name="registerActivityTitle">Register</string>
     <string name="invalidNameInput">This name is not in an accepted format</string>
+    <string name="app_title">DH Foods</string>
 </resources>
